<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.covid_19.MainActivity">
    <item
        android:id="@+id/action_symptoms"
        android:orderInCategory="100"
        android:title="@string/symptoms"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_prevention"
        android:orderInCategory="100"
        android:title="@string/prevention"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_more_info"
        android:orderInCategory="100"
        android:title="@string/more_info"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_retro"
        android:orderInCategory="100"
        android:title="@string/retro"
        app:showAsAction="never" />
</menu>
