<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RetroActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/retro"
        android:fontFamily="@font/work_sans_extrabold"
        android:textSize="28sp"
        android:textAlignment="center"
        android:layout_margin="30dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_name"
        android:fontFamily="@font/work_sans_regular"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:textColor="@android:color/black"
        />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/work_sans_regular"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:text="@string/dialog_retro"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:textAlignment="center"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal">
        <RadioButton android:id="@+id/radio_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:layout_marginEnd="30dp"
            />
        <RadioButton android:id="@+id/radio_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnRetro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_retro"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_shape"
        android:textColor="@android:color/white"
        android:fontFamily="@font/work_sans_regular" />


</LinearLayout>