<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/img_covid"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="5dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/covid_title"
                    android:fontFamily="@font/work_sans_extrabold"
                    android:textSize="28sp"
                    android:textColor="@android:color/black"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/covid_body"
                android:padding="20dp"
                android:fontFamily="@font/work_sans_regular"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dr_gatell"
                android:fontFamily="@font/work_sans_bold"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job_tittle_gatell"
                android:fontFamily="@font/work_sans_bold"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp"
                android:gravity="center_horizontal">



                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/img_gatell"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    app:civ_border_width="4dp"
                    app:civ_border_color="@color/colorPrimaryDark"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/message_gatell"
                    android:fontFamily="@font/work_sans_regular"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dr_adhanom"
                    android:fontFamily="@font/work_sans_bold"
                    android:textSize="20sp"
                    android:textColor="@color/colorAccent"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/job_tittle_adhanom"
                    android:fontFamily="@font/work_sans_bold"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingBottom="20dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/img_adhanom"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    app:civ_border_width="4dp"
                    app:civ_border_color="@color/colorPrimaryDark"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/work_sans_regular"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:text="@string/message_adhanom"/>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>



</LinearLayout>