<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.AppCompat"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".SymptomsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symptoms_title"
                android:fontFamily="@font/work_sans_extrabold"
                android:textSize="28sp"
                android:padding="20dp"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symptoms_body_1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:fontFamily="@font/work_sans_regular"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">

                <TableRow>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:padding="20dp">

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:src="@drawable/img_cough"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cough"
                            android:fontFamily="@font/work_sans_semibold"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"
                            android:textAlignment="center"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:padding="20dp">

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:src="@drawable/img_fever"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/fever"
                            android:fontFamily="@font/work_sans_semibold"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"
                            android:textAlignment="center"
                            />

                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:gravity="center_horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center_horizontal"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp">

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:src="@drawable/img_headache"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/hedache"
                            android:fontFamily="@font/work_sans_semibold"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"
                            android:textAlignment="center"
                            />

                    </LinearLayout>
                </TableRow>
            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symptoms_body_2"
                android:padding="20dp"
                android:fontFamily="@font/work_sans_regular"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">

                <TableRow>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:padding="20dp">

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:src="@drawable/img_difficulty_breathing"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/difficulty_breathing"
                            android:fontFamily="@font/work_sans_semibold"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"
                            android:textAlignment="center"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:padding="20dp">

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:src="@drawable/img_sore_throat"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/sore_throat"
                            android:fontFamily="@font/work_sans_semibold"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"
                            android:textAlignment="center"
                            />

                    </LinearLayout>
                </TableRow>

                <TableRow>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:padding="20dp">

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:src="@drawable/img_runny_nose"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/runny_nose"
                            android:fontFamily="@font/work_sans_semibold"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"
                            android:textAlignment="center"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:padding="20dp">

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:src="@drawable/img_red_eyes"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/red_eyes"
                            android:fontFamily="@font/work_sans_semibold"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"
                            android:textAlignment="center"
                            />

                    </LinearLayout>
                </TableRow>


                <TableRow
                    android:gravity="center_horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center_horizontal"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp">

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:src="@drawable/img_pain_in_muscles"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/pain_in_muscles"
                            android:fontFamily="@font/work_sans_semibold"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"
                            android:textAlignment="center"
                            />

                    </LinearLayout>
                </TableRow>
            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symptoms_body_3"
                android:padding="20dp"
                android:fontFamily="@font/work_sans_regular"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                />

        </LinearLayout>

    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

