<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PreventionActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prevention_title"
                android:fontFamily="@font/work_sans_extrabold"
                android:textSize="28sp"
                android:padding="20dp"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                />



            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">

                <TableRow>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:padding="20dp">

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:src="@drawable/img_wash_hands"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/wash_hands"
                            android:fontFamily="@font/work_sans_semibold"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"
                            android:textAlignment="center"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:padding="20dp">

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:src="@drawable/img_go_to_the_doctor"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/go_to_the_doctor"
                            android:fontFamily="@font/work_sans_semibold"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"
                            android:textAlignment="center"
                            />

                    </LinearLayout>
                </TableRow>

                <TableRow>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:padding="20dp">

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:src="@drawable/img_cough_or_sniff"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cough_or_sniff"
                            android:fontFamily="@font/work_sans_semibold"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"
                            android:textAlignment="center"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:padding="20dp">

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:src="@drawable/img_not_fake_news"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/not_fake_news"
                            android:fontFamily="@font/work_sans_semibold"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"
                            android:textAlignment="center"
                            />

                    </LinearLayout>
                </TableRow>
            </TableLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>